# spring-boot-study

./: .env.example  .gitignore  build.gradle  docker-compose.yml  pyproject.toml  settings.gradle
app/: dependencies.py  main.py  middleware.py  schemas.py
app/routers/: chat_rag.py  ingest.py
src/main/java/com/sesac/ai/backend/: AiBackendApplication.java
src/main/java/com/sesac/ai/backend/config/: AppConfig.java  DataInitializer.java  SwaggerConfig.java  WebClientConfig.java
src/main/java/com/sesac/ai/backend/controller/: AdminController.java  AuthController.java  ChatController.java  ChatLogController.java  ClothesController.java  DepartmentController.java  EmployeeController.java  GreetingController.java  HealthController.java  ItemController.java  RagController.java  UserController.java  UserInfoController.java
src/main/java/com/sesac/ai/backend/domain/: ChatLog.java  ChatLogRequest.java  ChatLogResponse.java  Clothes.java  Department.java  Employee.java  Item.java  Role.java  User.java  UserRequest.java  UserResponse.java
src/main/java/com/sesac/ai/backend/dto/: ChatLogRequest.java  ChatLogResponse.java  ClothesRequest.java  ClothesResponse.java  DepartmentRequest.java  DepartmentResponse.java  EmployeeRequest.java  EmployeeResponse.java  ItemRequest.java  ItemResponse.java  LoginRequest.java  SignupRequest.java  UserRequest.java  UserResponse.java
src/main/java/com/sesac/aibackend/controller/: ItemController.java
src/main/resources/: application.yaml
src/test/java/com/sesac/ai/backend/: AiBackendTests.java
tests/: test_health.py
(+51 files in other folders)
